--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -404,7 +404,7 @@ bundle common cfengine_package_names
       "pkg[SuSE_11_x86_64]" string => "$(pkg[redhat_5_x86_64])";
 
       # 32bit RPMs
-      "pkg[$(cfengine_master_software_content._rpm_dists_i386)_$(cfengine_master_software_content._rpm_arches_i386)]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el5.centos.i386.rpm";
+      "pkg[$(cfengine_master_software_content._rpm_dists)_$(cfengine_master_software_content._32bit_arches)]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el5.centos.i386.rpm";
 
       # Redhat/Centos/Oracle 6, SLES 12-15 use the same package
 
@@ -438,7 +438,7 @@ bundle common cfengine_package_names
 
       # 32bit DEBs
 
-      "pkg[$(cfengine_master_software_content._deb_dists_i386)_$(cfengine_master_software_content._deb_arches_i386)]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian7_i386.deb";
+      "pkg[$(cfengine_master_software_content._deb_dists)_$(cfengine_master_software_content._32bit_arches)]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian7_i386.deb";
 
       "my_pkg"
         string => "$(pkg[$(sys.flavor)_$(sys.arch)])",
@@ -466,6 +466,8 @@ bundle agent cfengine_master_software_content
       # Map platform/directory identifier to upstream package URLs
       # Better to read in an external explicit data structure?
 
+      "_32bit_arches" slist => { "i386", "i586", "i686" };
+
       # Redhat/Centos/Oracle 5 and SuSE 11 all use the same package
       "dir[redhat_5_x86_64]" string => "agent_rpm_x86_64";
       "dir[centos_5_x86_64]" string => "$(dir[redhat_5_x86_64])";
@@ -473,13 +475,11 @@ bundle agent cfengine_master_software_content
       "dir[SuSE_11_x86_64]" string => "$(dir[redhat_5_x86_64])";
 
       # All 32bit rpms use the same package
-      "_rpm_dists_i386" slist => { "redhat_5", "redhat_6", "redhat_7",
-                                   "centos_5", "centos_6", "centos_7",
-                                   "SuSE_11", "SuSE_10" };
+      "_rpm_dists" slist => { "redhat_5", "redhat_6", "redhat_7",
+                              "centos_5", "centos_6", "centos_7",
+                              "SuSE_11", "SuSE_10" };
 
-      "_rpm_arches_i386" slist => { "i386", "i586", "i686" };
-
-      "dir[$(_rpm_dists_i386)_$(rpm_arches_i386)]" string => "agent_rpm_i386";
+      "dir[$(_rpm_dists)_$(_32bit_arches)]" string => "agent_rpm_i386";
 
       # Redhat/Centos/Oracle 6 use the same package
       "dir[redhat_6_x86_64]" string => "agent_rhel6_x86_64";
@@ -508,14 +508,12 @@ bundle agent cfengine_master_software_content
       "dir[ubuntu_18_x86_64]" string => "agent_ubuntu18_x86_64";
 
       # All 32bit debs use the same package
-      "_deb_dists_i386" slist => { "debian_4", "debian_5", "debian_6",
-                                   "debian_7", "debian_8", "debian_9",
-                                   "debian_10", "ubuntu_14", "ubuntu_16",
-                                   "ubuntu_18" };
+      "_deb_dists" slist => { "debian_4", "debian_5", "debian_6",
+                              "debian_7", "debian_8", "debian_9",
+                              "debian_10", "ubuntu_14", "ubuntu_16",
+                              "ubuntu_18" };
 
-      "_deb_arches_i386" slist => { "i386", "i586", "i686" };
-
-      "dir[$(_deb_dists_i386)_$(_deb_arches_i386)]" string => "agent_deb_i386";
+      "dir[$(_deb_dists)_$(_32bit_arches)]" string => "agent_deb_i386";
 
       "platform_dir" slist => getindices( dir );
       "download_dir" string => "$(sys.workdir)/master_software_updates";
