--- a/promises.cf.in
+++ b/promises.cf.in
@@ -83,6 +83,10 @@ body common control
           package_module => $(package_module_knowledge.platform_default);
 @endif
 
+    alpinelinux::
+          package_module => $(package_module_knowledge.platform_default);
+
+
     any::
         ignore_missing_bundles => "$(def.control_common_ignore_missing_bundles)";
         ignore_missing_inputs => "$(def.control_common_ignore_missing_inputs)";
