--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -832,6 +832,8 @@ body package_method u_generic(repo)
         package_add_command        => "\"$(sys.winsysdir)\msiexec.exe\" /qn /i";
         package_update_command     => "\"$(sys.winsysdir)\msiexec.exe\" /qn /i";
         package_delete_command     => "\"$(sys.winsysdir)\msiexec.exe\" /qn /x";
+        package_version_less_command => '$(sys.winsysdir)$(const.dirsep)WindowsPowerShell$(const.dirsep)v1.0$(const.dirsep)powershell.exe "$(sys.bindir)$(const.dirsep)vercmp.ps1" "$(v1)" "lt" "$(v2)"';
+        package_version_equal_command => '$(sys.winsysdir)$(const.dirsep)WindowsPowerShell$(const.dirsep)v1.0$(const.dirsep)powershell.exe "$(sys.bindir)$(const.dirsep)vercmp.ps1" "$(v1)" "eq" "$(v2)"';
 
     freebsd::
 
