--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           repository: cfengine/core
           path: core
-          ref: ${{steps.together.outputs.core}}
+          ref: ${{steps.together.outputs.core || github.base_ref || github.ref}}
           submodules: recursive
       - name: Install dependencies
         run: sudo apt-get update -y && sudo apt-get install -y libssl-dev libpam0g-dev liblmdb-dev byacc curl libyaml-dev valgrind
