Made agentfacility in body agent control configurable via Augments
This change allows for the configuration of agentfacility in body agent control
via Augments. Each policy entry (promises.cf via controls/cf_agent.cf, update.cf
and standalone_self_upgrade.cf) have been instrumented to use the value of
default:def.control_agent_agentfacility if the class
control_agent_agentfacility_configured is defined. The class
control_agent_agentfacility_configured is defined in each policy entry (promises.cf via
controls/def.cf, update.cf via controls/update_def.cf, and
standalone_self_upgrade.cf) only if the value of
default:def.control_agent_agentfacility is a valid value (based on current
documentation).

Ticket: ENT-10209
Changelog: Title

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -139,7 +139,20 @@ bundle common update_def
                           "true",
                           "false");
 
+      "control_agent_agentfacility" -> { "ENT-10209" }
+        string => "",
+        if => not( isvariable ( "default:def.control_agent_agentfacility" ));
+
+
   classes:
+
+      "control_agent_agentfacility_configured" -> { "ENT-10209" }
+        expression => regcmp( "LOG_(USER|DAEMON|LOCAL[0-7])",
+                              $(control_agent_agentfacility) ),
+        comment => concat( "If default:def.control_agent_agentfacility is a",
+                           " valid setting, we want to use it in body agent",
+                           " control for setting agentfacility" );
+
 
       "control_common_tls_min_version_defined" -> { "ENT-10198" }
         expression => isvariable( "default:def.control_common_tls_min_version"),
