Fixed suse package_inventory defaults
Before, only redhat or redhat_derived systems were having package_inventory defined.
This caused no software inventory to be reported to an enterprise hub for suse systems.

Previously a check was added for the yum package module written in python that the python version must be 3.x or greater than 2.4.

In this change we have refactored to check the python version for all linux cases of package_inventory.

This check seems sufficient for apt_get, yum and zypper, the three package modules written in python.

Ticket: ENT-10248
Changelog: title
(cherry picked from commit 4ef65dec482fc4fe29cea7d0a04a1474d90eed4e)

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -93,13 +93,8 @@ body common control
       # modules in which you MUST provide package modules used to generate
       # software inventory reports. You can also provide global default package module
       # instead of specifying it in all package promises.
-    (debian).!disable_inventory_package_refresh::
+    (debian|redhat|centos|suse|sles|opensuse|amazon_linux).cfe_python_for_package_modules_supported.!disable_inventory_package_refresh::
           package_inventory => { $(package_module_knowledge.platform_default) };
-
-      # We only define pacakge_invetory on redhat like systems that have a
-      # python version that works with the package module.
-    (redhat|centos|suse|sles|opensuse|amazon_linux).cfe_yum_package_module_supported.!disable_inventory_package_refresh::
-        package_inventory => { $(package_module_knowledge.platform_default) };
 
     (debian|redhat|suse|sles|opensuse|amazon_linux)::
           package_module => $(package_module_knowledge.platform_default);
