--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -142,6 +142,14 @@ bundle agent cfengine_software
         comment => "On debian hosts it's the standard to use 'amd64' instead of
                    'x86_64' in package architectures.";
 
+    (debian|ubuntu).aarch64::
+
+      "pkg_arch"
+        string => "arm64",
+        comment => concat( "On debian hosts it's the CFEngine standard to use 'arm64' in",
+                           "the package filename." );
+
+
     (redhat|centos|suse|sles).32_bit::
       "pkg_arch"
         string => "i386",
@@ -523,6 +531,12 @@ bundle common cfengine_package_names
       "pkg[centos_8_x86_64]" string => "$(pkg[redhat_8_x86_64])";
       "pkg[oracle_8_x86_64]" string => "$(pkg[redhat_8_x86_64])";
 
+      # Redhat/Centos/Oracle 8 use the same package
+      "pkg[redhat_9_x86_64]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el9.x86_64.rpm";
+      "pkg[centos_9_x86_64]" string => "$(pkg[redhat_9_x86_64])";
+      "pkg[oracle_9_x86_64]" string => "$(pkg[redhat_9_x86_64])";
+
+
       # 64bit Debian
 
       "pkg[debian_7_x86_64]"  string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian7_amd64.deb";
@@ -536,9 +550,15 @@ bundle common cfengine_package_names
       "pkg[ubuntu_16_x86_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).ubuntu16_amd64.deb";
       "pkg[ubuntu_18_x86_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).ubuntu18_amd64.deb";
       "pkg[ubuntu_20_x86_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).ubuntu20_amd64.deb";
+      "pkg[ubuntu_22_x86_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).ubuntu22_amd64.deb";
+
+      # aarch64 Ubuntu
+      "pkg[ubuntu_22_arm_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).ubuntu22_arm64.deb";
+
+      # aarch64 Debian
+      "pkg[debian_11_arm_64]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian11_arm64.deb";
 
       # 32bit DEBs
-
       "pkg[$(cfengine_master_software_content._deb_dists)_$(cfengine_master_software_content._32bit_arches)]" string => "$(pkg_name)_$(pkg_version)-$(pkg_release).debian7_i386.deb";
 
       # Windows
@@ -606,18 +626,26 @@ bundle agent cfengine_master_software_content
       "dir[centos_8_x86_64]" string => "$(dir[redhat_8_x86_64])";
       "dir[oracle_8_x86_64]" string => "$(dir[redhat_8_x86_64])";
 
+      # Redhat/Centos/Oracle 9 use the same package
+      "dir[redhat_9_x86_64]" string => "agent_rhel9_x86_64";
+      "dir[centos_9_x86_64]" string => "$(dir[redhat_9_x86_64])";
+      "dir[oracle_9_x86_64]" string => "$(dir[redhat_9_x86_64])";
+
       # Debian
       "dir[debian_7_x86_64]" string => "agent_deb_x86_64";
       "dir[debian_8_x86_64]" string => "agent_debian8_x86_64";
       "dir[debian_9_x86_64]" string => "agent_debian9_x86_64";
       "dir[debian_10_x86_64]" string => "agent_debian10_x86_64";
       "dir[debian_11_x86_64]" string => "agent_debian11_x86_64";
+      "dir[debian_11_arm_64]" string => "agent_debian11_arm_64";
 
       # Ubuntu
       "dir[ubuntu_14_x86_64]" string => "agent_ubuntu14_x86_64";
       "dir[ubuntu_16_x86_64]" string => "agent_ubuntu16_x86_64";
       "dir[ubuntu_18_x86_64]" string => "agent_ubuntu18_x86_64";
       "dir[ubuntu_20_x86_64]" string => "agent_ubuntu20_x86_64";
+      "dir[ubuntu_22_x86_64]" string => "agent_ubuntu22_x86_64";
+      "dir[ubuntu_22_arm_64]" string => "agent_ubuntu22_arm_64";
 
       # All 32bit debs use the same package
       "_deb_dists" slist => { "debian_4", "debian_5", "debian_6",
