--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -521,20 +521,23 @@ bundle common cfengine_package_names
       "pkg[SuSE_15_x86_64]" string => "$(pkg[redhat_6_x86_64])";
       "pkg[opensuse_leap_15_x86_64]" string => "$(pkg[redhat_6_x86_64])";
 
-      # Redhat/Centos/Oracle 7 use the same package
+      # Redhat/Centos/Oracle/Rocky 7 use the same package
       "pkg[redhat_7_x86_64]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el7.x86_64.rpm";
       "pkg[centos_7_x86_64]" string => "$(pkg[redhat_7_x86_64])";
       "pkg[oracle_7_x86_64]" string => "$(pkg[redhat_7_x86_64])";
+      "pkg[rocky_7_x86_64]" string => "$(pkg[redhat_7_x86_64])";
 
-      # Redhat/Centos/Oracle 8 use the same package
+      # Redhat/Centos/Oracle/Rocky 8 use the same package
       "pkg[redhat_8_x86_64]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el8.x86_64.rpm";
       "pkg[centos_8_x86_64]" string => "$(pkg[redhat_8_x86_64])";
       "pkg[oracle_8_x86_64]" string => "$(pkg[redhat_8_x86_64])";
+      "pkg[rocky_8_x86_64]" string => "$(pkg[redhat_8_x86_64])";
 
-      # Redhat/Centos/Oracle 8 use the same package
+      # Redhat/Centos/Oracle/Rocky 8 use the same package
       "pkg[redhat_9_x86_64]" string => "$(pkg_name)-$(pkg_version)-$(pkg_release).el9.x86_64.rpm";
       "pkg[centos_9_x86_64]" string => "$(pkg[redhat_9_x86_64])";
       "pkg[oracle_9_x86_64]" string => "$(pkg[redhat_9_x86_64])";
+      "pkg[rocky_9_x86_64]" string => "$(pkg[redhat_9_x86_64])";
 
 
       # 64bit Debian
@@ -616,20 +619,23 @@ bundle agent cfengine_master_software_content
       "dir[centos_6_x86_64]" string => "$(dir[redhat_6_x86_64])";
       "dir[oracle_6_x86_64]" string => "$(dir[redhat_6_x86_64])";
 
-      # Redhat/Centos/Oracle 7 use the same package
+      # Redhat/Centos/Oracle/Rocky 7 use the same package
       "dir[redhat_7_x86_64]" string => "agent_rhel7_x86_64";
       "dir[centos_7_x86_64]" string => "$(dir[redhat_7_x86_64])";
       "dir[oracle_7_x86_64]" string => "$(dir[redhat_7_x86_64])";
+      "dir[rocky_7_x86_64]" string => "$(dir[redhat_7_x86_64])";
 
-      # Redhat/Centos/Oracle 8 use the same package
+      # Redhat/Centos/Oracle/Rocky 8 use the same package
       "dir[redhat_8_x86_64]" string => "agent_rhel8_x86_64";
       "dir[centos_8_x86_64]" string => "$(dir[redhat_8_x86_64])";
       "dir[oracle_8_x86_64]" string => "$(dir[redhat_8_x86_64])";
+      "dir[rocky_8_x86_64]" string => "$(dir[redhat_8_x86_64])";
 
-      # Redhat/Centos/Oracle 9 use the same package
+      # Redhat/Centos/Oracle/Rocky 9 use the same package
       "dir[redhat_9_x86_64]" string => "agent_rhel9_x86_64";
       "dir[centos_9_x86_64]" string => "$(dir[redhat_9_x86_64])";
       "dir[oracle_9_x86_64]" string => "$(dir[redhat_9_x86_64])";
+      "dir[rocky_9_x86_64]" string => "$(dir[redhat_9_x86_64])";
 
       # Debian
       "dir[debian_7_x86_64]" string => "agent_deb_x86_64";
