Separated default self upgrade binary version from policy version
This improves the behavior for adding masterfiles as a module via repository
URL.

Prior to this change the policy version and default binary version to target for
self upgrade were the same. To align them you either had to explicitly set the
version which becomes a lie about the actual policy version or you would end up
targeting upgrades to a version of binaries that did not exist including the
commit sha of the masterfiles version built from.

With this change, if you simply cfbs add https://github.com/cfengine/masterfiles
or cfbs add https://github.com/cfengine/masterfiles@COMMIT at a commit that was
not a release the policy version attribute in body common control will get a
version with the commit sha and the default binary versions will come from
.CFVERION which should be the current or next release which is the intention of
the default.

Ticket: ENT-10657
Changelog: Title

--- a/configure.ac
+++ b/configure.ac
@@ -239,13 +239,12 @@ dnl Now make the Makefiles
 dnl ######################################################################
 
 AC_CONFIG_FILES([Makefile
-                controls/update_def.cf
-                promises.cf
-                standalone_self_upgrade.cf
                 tests/Makefile
                 tests/acceptance/Makefile
                 tests/unit/Makefile
 ])
+
+AC_CONFIG_COMMANDS([render_templates],[./render-templates.sh])
 
 AC_OUTPUT
 
