--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -7,7 +7,7 @@ bundle common update_def
   vars:
     any::
 
-      "current_version" string => "@VERSION@";
+      "current_version" string => "@DEFAULT_SELF_UPGRADE_BINARY_VERSION@";
       "current_release" string => "@RELEASE@";
 
       # MPF Controls
