--- a/.github/workflows/bootstrap_policy_run_check.yml
+++ b/.github/workflows/bootstrap_policy_run_check.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           path: masterfiles
       - name: Install, bootstrap, policy run
-        run: masterfiles/ci/run.sh
+        run: masterfiles/ci/docker-bootstrap-policy-run.sh
