--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -259,7 +259,7 @@ bundle agent cfengine_software_cached_locally
       # NOTE This is pegged to the single upstream policy hub, it won't fail
       # over to a secondary for copying the binarys to update.
 
-      "$(local_software_dir)"
+      "$(local_software_dir)/."
         comment => "Copy binary updates from master source on policy server",
         handle => "cfe_internal_update_bins_files_pkg_copy",
         copy_from => u_dsync( "$(master_software_location)/$(package_dir)", $(sys.policy_hub) ),
