Made protocol_version configurable via Augments
This change implements easy configuration of protocol_version in body common control for the standard MPF entries.

Ticket: CFE-4543
Changelog: Title

--- a/update.cf.in
+++ b/update.cf.in
@@ -43,6 +43,9 @@ body common control
 
     control_common_system_log_level_defined::
         system_log_level => "$(default:def.control_common_system_log_level)";
+
+    control_common_protocol_version_defined::
+        protocol_version => "$(default:def.control_common_protocol_version)";
 }
 
 #############################################################################
