Made protocol_version configurable via Augments
This change implements easy configuration of protocol_version in body common control for the standard MPF entries.

Ticket: CFE-4543
Changelog: Title
(cherry picked from commit 2b39683bf9ad59e39e3d53698b2924910df9d8b1)

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -5,6 +5,14 @@ bundle common update_def
     any::
       "sys_policy_hub_port_exists" expression => isvariable("sys.policy_hub_port");
 
+      "control_common_protocol_version_defined" -> { "CFE-4543" }
+        expression => isvariable( "default:def.control_common_protocol_version" ),
+        comment => concat( "Defines the protocol version to use for all outgoing",
+                           " connections.",
+                           # It's challenging to keep this aligned with the core agent code
+                           # cf-promises --syntax-description=json | jq -r '.bodyTypes.common.attributes.protocol_version.range'
+                           " (1|classic|2|tls|3|cookie|4|filestream|latest)" );
+
   vars:
       "hub_binary_version" -> { "ENT-10664" }
         data => data_regextract(
